<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back7"
    tools:context=".WeatherData">

    <TextView
        android:id="@+id/maxTemp_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/maxTemp"
        app:layout_constraintTop_toBottomOf="@+id/minTemp_Value" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/humidity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/humidity_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTemp" />

    <TextView
        android:id="@+id/humidity_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/maxTemp_Value" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/pressure"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/pressure_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />

    <TextView
        android:id="@+id/pressure_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pressure"
        app:layout_constraintTop_toBottomOf="@+id/humidity_Value" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/desc_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure" />

    <TextView
        android:id="@+id/desc_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/desc"
        app:layout_constraintTop_toBottomOf="@+id/pressure_Value" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/sunrise"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sunrise_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:id="@+id/sunrise_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunrise"
        app:layout_constraintTop_toBottomOf="@+id/desc_Value" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/sunset"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/sunset_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise" />

    <TextView
        android:id="@+id/sunset_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunset"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_Value" />

    <TextView
        android:id="@+id/weather_Tittle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weather_tittle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/country"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="40dp"
        android:text="@string/country"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/country_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_Tittle" />

    <TextView
        android:id="@+id/country_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/country"
        app:layout_constraintTop_toBottomOf="@+id/weather_Tittle" />

    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/feels_like"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/feelsLike_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/feelsLike_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/feelsLike"
        app:layout_constraintTop_toBottomOf="@+id/country_Value" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/MIN"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/minTemp_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feelsLike" />

    <TextView
        android:id="@+id/minTemp_Value"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minTemp"
        app:layout_constraintTop_toBottomOf="@+id/feelsLike_Value" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginTop="25dp"
        android:text="@string/MAX"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/maxTemp_Value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTemp" />

    <Button
        android:id="@+id/map_BTN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/Map"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunset" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        app:itemBackground="@color/lime_green"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:layout_editor_absoluteX="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>