<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="705dp"
        android:fontFamily="@font/fjalla_one"
        android:text="@string/z_number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/student_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="679dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fjalla_one"
        android:text="@string/potter"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/studentID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/fjalla_one"
        android:text="@string/welcome_Text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/information"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/info_Text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/goButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/goButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:minHeight="48dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/LocationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/user_input"
        app:layout_constraintTop_toBottomOf="@+id/information"
        app:srcCompat="@drawable/ic_search"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/LocationButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goButton"
        app:layout_constraintTop_toBottomOf="@+id/information"
        app:srcCompat="@drawable/ic_location"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>